syntax = "proto3";

package documentevaluation;

service DocumentEvaluationService {
  rpc EvaluateDocuments (DocumentRequest) returns (DocumentResponse);
}

message DocumentRequest {
  repeated Document documents = 1;
}

message Document {
  int32 id = 1;
  string title = 2;
  string content = 3;
}

message EvaluationResult {
  int32 document_id = 1;
  string completeness = 2;
  string clarity = 3;
  string relevance = 4;
  string objectivity = 5;
  string grammar = 6;
  string formatting = 7;
  string redundancy = 8;
  string date_of_information = 9;
  string contradictions = 10;
  string repetition_across_files = 11;
  string new_value = 12;
  bool is_valid = 13;
}

message DocumentResponse {
  repeated EvaluationResult results = 1;
}
